@@ -1,6 +1,9 @@
 New in v1.2.3 (????/??/??)
 ---------------------------
 
+Supress warnings about the deprecated sha module in Python 2.6. We'll remove
+this after rdiff-backup is ported to Python 3. (Patch from Josh Nisly)
+
 Test for symlink permissions now produces a functioning symlink. Thanks to
 Julien Poffet for reporting the issue. (Andrew Ferguson)
 
